--- a/roles/workshop/templates/rh_catalog_sources.yaml.j2
+++ b/roles/workshop/templates/rh_catalog_sources.yaml.j2
@@ -5,5 +5,5 @@ metadata:
   namespace: openshift-marketplace
 spec:
   targetNamespace: openshift-operators
-  packages: knative-serving-operator,knative-eventing-operator,openshift-pipelines-operator,servicemeshoperator
-  source: community-operators
+  packages: "{{ stacks.redhat | json_query('[*].operator') | join(',') }}"
+  source: redhat-operators
