--- a/roles/workshop/templates/catalog_sources.yaml.j2
+++ b/roles/workshop/templates/catalog_sources.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1
 kind: CatalogSourceConfig
 metadata:
-  name: rhd-workshop-packages
+  name: rhd-workshop-packages-community
   namespace: openshift-marketplace
 spec:
   targetNamespace: openshift-operators
