--- a/roles/workshop/templates/subscriptions/knative_eventing/subscription.yaml.j2
+++ b/roles/workshop/templates/subscriptions/knative_eventing/subscription.yaml.j2
@@ -9,3 +9,5 @@ spec:
   source: rhd-workshop-packages-community
   name: knative-eventing-operator
   sourceNamespace: openshift-operators
+  startingCSV: "{{'knative-eventing-operator.v'+stack_kn_eventing.version}}"
+  installPlanApproval: "{{approval_mode}}"
