--- a/roles/workshop/templates/subscriptions/knative_serving/subscription.yaml.j2
+++ b/roles/workshop/templates/subscriptions/knative_serving/subscription.yaml.j2
@@ -9,3 +9,5 @@ spec:
   source: rhd-workshop-packages-community
   name: knative-serving-operator
   sourceNamespace: openshift-operators
+  startingCSV: "{{'knative-serving-operator.v'+stack_kn_serving.version}}"
+  installPlanApproval: "{{approval_mode}}"
