--- a/roles/workshop/templates/subscriptions/elastic_search/subscription.yaml.j2
+++ b/roles/workshop/templates/subscriptions/elastic_search/subscription.yaml.j2
@@ -7,5 +7,7 @@ metadata:
 spec:
   channel: preview
   source: rhd-workshop-packages
+  startingCSV: "{{'elasticsearch-operator.'+stack_elastic_search.version}}"
+  installPlanApproval: "{{approval_mode}}"
   name: elasticsearch-operator
   sourceNamespace: openshift-operators
